<resources>
    <string name="app_name">Balance</string>
    <string name="profit">Profit</string>
    <string name="loss">Loss</string>
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>
    <string name="welcome">Your balance list are empty. Press \"Profit\" or \"Loss\" button to add your income (Profit) or expenses (Loss).</string>
    <string name="filter_settings">Filter settings</string>
    <string name="show">Show:</string>
    <string name="sum">Sum:</string>
    <string name="from">From:</string>
    <string name="min">Min</string>
    <string name="to">To:</string>
    <string name="max">Max</string>
    <string name="category">Category:</string>
    <string name="show_all">Show all</string>
    <string name="apply">Apply</string>
    <string name="type_notes_here">Type notes here</string>
    <string name="please_write_name">Please write name</string>
    <string name="delete">Delete</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="category_without_dots">Category</string>
    <string name="keyboard">Keyboard</string>
    <string name="add_edit_category">Add/Edit Category</string>
</resources>
