<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:android.support.design="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/filter_settings"
        android:textColor="@color/colorAccent"
        android:textSize="22sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorPrimary" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show"
        android:textColor="@color/colorAccent"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_profit_chart" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_weight="1"
            android:text="@string/profit"
            android:textColor="@color/colorAccent"
            android:textSize="16sp" />

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/filter_profit_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            app:showText="false"
            app:theme="@style/SwitchCompatCustom" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_loss_chart" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_weight="1"
            android:text="@string/loss"
            android:textColor="@color/colorAccent"
            android:textSize="16sp" />

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/filter_lose_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            app:showText="false"
            app:theme="@style/SwitchCompatCustom" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorPrimary" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sum"
        android:textColor="@color/colorAccent"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="56dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/from"
            android:textColor="@color/colorAccent"
            android:textSize="16sp" />

        <android.support.v7.widget.AppCompatCheckBox
            android:id="@+id/filter_min_check_box"
            android:layout_width="64dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:checked="true"
            android:text="@string/min"
            android:textColor="@color/colorAccent"
            android.support.design:buttonTint="@color/colorPrimary"
            app:buttonTint="@color/colorPrimary" />

        <EditText
            android:id="@+id/filter_min_et"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/selector_edit_text"
            android:enabled="false"
            android:inputType="numberDecimal"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="56dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/to"
            android:textColor="@color/colorAccent"
            android:textSize="16sp" />

        <android.support.v7.widget.AppCompatCheckBox
            android:id="@+id/filter_max_check_box"
            android:layout_width="64dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:checked="true"
            android:text="@string/max"
            android:textColor="@color/colorAccent"
            android.support.design:buttonTint="@color/colorPrimary"
            app:buttonTint="@color/colorPrimary" />

        <EditText
            android:id="@+id/filter_max_et"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/selector_edit_text"
            android:enabled="false"
            android:inputType="numberDecimal"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:textSize="16sp" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorPrimary" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/category"
            android:textColor="@color/colorAccent"
            android:textSize="16sp" />

        <android.support.v7.widget.AppCompatCheckBox
            android:id="@+id/filter_show_all_category_check_box"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/show_all"
            android:textColor="@color/colorAccent"
            android.support.design:buttonTint="@color/colorPrimary"
            app:buttonTint="@color/colorPrimary" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="112dp">

        <android.support.v7.widget.RecyclerView
            android:layout_centerInParent="true"
            android:id="@+id/filter_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="104dp" />

        <View
            android:id="@+id/filter_recycler_block"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/whiteTransBlue"
            android:clickable="true" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorPrimary" />

</LinearLayout>